Add a description to the mutual and increasing love scenarios

--- a/mathmodelingproject.ipynb
+++ b/mathmodelingproject.ipynb
@@ -241,7 +241,9 @@
    "id": "f960f915",
    "metadata": {},
    "source": [
-    "## Mutual and increasing love scenarios"
+    "## Mutual and increasing love scenarios\n",
+    "\n",
+    "As presented in figures 1 and 2 in the article, you will find below mutual and increasing love in which Romeo's feelings are a bit more intense. The important parameters here are **_b_** and **_c_**. In other words, this configuration can be obtain by using only the simple model. Here, we represent the (tres petite) discrepancy of feelings between Romeo and Juliette by setting **_b > c_**"
    ]
   },
   {
