add print equilibrium points

--- a/mathmodelingproject.ipynb
+++ b/mathmodelingproject.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 1,
    "id": "1369ec43",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 2,
    "id": "c8347cde",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "id": "63777f34",
    "metadata": {},
    "outputs": [],
@@ -77,9 +77,13 @@
     "    J = np.array([[a, b], [c, d]])\n",
     "    delta = a * d - b * c\n",
     "    eigenvalues, eigenvectors = np.linalg.eig(J)\n",
-    "\n",
+    "    \n",
     "    #print(f\"Jacobian:\\n{J}\")\n",
     "    print(f\"Determinant Δ = {delta:.2f}\")\n",
+    "    if delta != 0:\n",
+    "        print(\"→ One unique equilibrium point: (0, 0)\")\n",
+    "    else:\n",
+    "        print(\"→ Infinite or no equilibrium points (det(A)=0).\")\n",
     "    print(f\"Eigenvalues = {eigenvalues}\\n\")\n",
     "\n",
     "    if np.isreal(eigenvalues).all():  # Real eigenvalues\n",
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 4,
    "id": "e8730b66",
    "metadata": {},
    "outputs": [],
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 5,
    "id": "c5e7e48b",
    "metadata": {},
    "outputs": [],
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 6,
    "id": "c1683806",
    "metadata": {},
    "outputs": [],
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 7,
    "id": "9b10d03d",
    "metadata": {},
    "outputs": [],
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 8,
    "id": "a19023a0",
    "metadata": {},
    "outputs": [
@@ -261,6 +265,7 @@
       "SCENARIO: Figure 1\n",
       "Parameters: a=0, b=0.2, c=0.05, d=0\n",
       "Determinant Δ = -0.01\n",
+      "→ One unique equilibrium point: (0, 0)\n",
       "Eigenvalues = [ 0.1 -0.1]\n",
       "\n",
       "→ Stability type: Saddle point (unstable)\n",
@@ -286,6 +291,7 @@
       "SCENARIO: Figure 2\n",
       "Parameters: a=0, b=0.2, c=0.1, d=0\n",
       "Determinant Δ = -0.02\n",
+      "→ One unique equilibrium point: (0, 0)\n",
       "Eigenvalues = [ 0.14142136 -0.14142136]\n",
       "\n",
       "→ Stability type: Saddle point (unstable)\n",
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 9,
    "id": "035574af",
    "metadata": {},
    "outputs": [
@@ -346,6 +352,7 @@
       "SCENARIO: Figure 3\n",
       "Parameters: a=0, b=0.5, c=-0.5, d=0\n",
       "Determinant Δ = 0.25\n",
+      "→ One unique equilibrium point: (0, 0)\n",
       "Eigenvalues = [0.+0.5j 0.-0.5j]\n",
       "\n",
       "→ Stability type: Center (neutral oscillations)\n",
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 10,
    "id": "a6321315",
    "metadata": {},
    "outputs": [
@@ -405,6 +412,7 @@
       "SCENARIO: Figure 5\n",
       "Parameters: a=0.5, b=0, c=-0.5, d=0\n",
       "Determinant Δ = 0.00\n",
+      "→ Infinite or no equilibrium points (det(A)=0).\n",
       "Eigenvalues = [0.  0.5]\n",
       "\n",
       "→ Stability type: Saddle point (unstable)\n",
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "id": "c785f63c",
    "metadata": {},
    "outputs": [
@@ -464,6 +472,7 @@
       "SCENARIO: Figure 6\n",
       "Parameters: a=-0.3, b=0.3, c=0.4, d=-0.5\n",
       "Determinant Δ = 0.03\n",
+      "→ One unique equilibrium point: (0, 0)\n",
       "Eigenvalues = [-0.03944487 -0.76055513]\n",
       "\n",
       "→ Stability type: Stable node\n",
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 12,
    "id": "d5851670",
    "metadata": {},
    "outputs": [
@@ -522,6 +531,7 @@
       "SCENARIO: a 'what could've been' love\n",
       "Parameters: a=0, b=0, c=0, d=0\n",
       "Determinant Δ = 0.00\n",
+      "→ Infinite or no equilibrium points (det(A)=0).\n",
       "Eigenvalues = [0. 0.]\n",
       "\n",
       "→ Stability type: None\n",
