erase unecessery text

--- a/mathmodelingproject.ipynb
+++ b/mathmodelingproject.ipynb
@@ -349,9 +349,7 @@
    "id": "f960f915",
    "metadata": {},
    "source": [
-    "## Mutual and increasing love scenarios\n",
-    "\n",
-    "As presented in figures 1 and 2 in the article, you will find below mutual and increasing love in which Romeo's feelings are a bit more intense. The important parameters here are **_b_** and **_c_**. In other words, this configuration can be obtain by using only the simple model. Here, we represent the (tres petite) discrepancy of feelings between Romeo and Juliette by setting **_b > c_**"
+    "## Mutual and increasing love scenarios\n"
    ]
   },
   {
@@ -555,15 +553,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "58a604e9",
-   "metadata": {},
-   "source": [
-    "In figure 3, we have an endless cycle of love versus strife. It is not very well represented in the article, so here is a version that is easier to see. \n",
-    "To represent such relationship, we focus once again on **_b_** and **_c_**. We have to chose the parameter so one is positive and the other is negative.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 236,
    "id": "035574af",
@@ -629,15 +618,6 @@
    "metadata": {},
    "source": [
     "## Unrequited love"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b69a051c",
-   "metadata": {},
-   "source": [
-    "Just like in figure 5.\n",
-    "Here, romeo follows his own feeling but is not influenced by those of juliet. Juliet react negativly to romeos love."
    ]
   },
   {
@@ -750,15 +730,6 @@
    "metadata": {},
    "source": [
     "## Fading relationship"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e6e1644",
-   "metadata": {},
-   "source": [
-    "Like in figure 6, we have a cold relationship between the two lovers. \n",
-    "Both romeo and juliette have a positive influence on eachothers feelings, but the way they don't listen to their own feelings takes over, and they fall apart, slowly."
    ]
   },
   {
